v1.7: Java complete + React Native dedicated reference (single-shot coverage)
Java (java-patterns.md):
- Category 10: Spring @Async silent exec, @Async void exception swallowed,
  @Scheduled not firing, @Cacheable stale data, @PreAuthorize SpEL silent 403
- Category 11: Spring Boot 3 javax→jakarta ClassNotFoundException,
  @HttpExchange error handling change
- Category 12: Kafka wrong group.id/offset.reset, consumer rebalance storm,
  transactional producer uncommitted, poison pill partition block
- Category 13: Virtual thread synchronized pinning (JFR prove),
  ThreadLocal→ScopedValue migration
- OOM and thread dump patterns now have full Prove sections
- 46 patterns, 100% Prove coverage

React Native (references/react-native-patterns.md) — new file:
- 9 categories, 26 patterns, 100% Prove coverage
- Metro cache, duplicate module, Hermes prod strip
- React Navigation params, goBack, remount, deep link
- FlatList keyExtractor, getItemLayout, removeClippedSubviews
- Animated useNativeDriver, Reanimated worklet, animation leak
- Expo EAS plugin missing, env var undefined, OTA stale
- AsyncStorage null first install, Redux stale selector, useEffect race
- iOS Info.plist, Android manifest, safe area notch
- Native module release null, JSI TurboModule incompatibility
- Debugger interference, Fast Refresh stale state

SKILL.md:
- Phase 2A: dedicated React Native routing row (20+ signals)
- Phase 4: react-native-patterns.md in domain router table

Targeted-Prove-First (v1.6) now has 72 patterns with complete Prove
sections across Java and React Native — single-shot HIGH confidence
path fully operational for both domains.